Update the About Us Page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -66,6 +66,7 @@
                     My home is also my studio, 
                     which I have set up in a way to get the most natural light.
                 </p>
+                <img src="images/a3.jpg" id="a3-image" alt="image">
             </div>
 
         </div>
