--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,8 +18,8 @@
             <div id="site-name">Chalk stories</div>
             <ul id="nav-bar">
                 <a href="#" id="link"><li id="link-name">Home</li></a>
-                <a href="#" id="link"><li id="link-name">Gallery</li></a>
-                <a href="#" id="link"><li id="link-name1">About Us</li></a>
+                <a href="gallery.html" id="link"><li id="link-name">Gallery</li></a>
+                <a href="aboutUs.html" id="link"><li id="link-name1">About Us</li></a>
                 <a href="#" id="link"><li id="link-name">Contact Us</li></a>
                 <a href="#" id="link"><li id="link-name">Reviews</li></a>
             </ul>
