Update the animal.html page

--- a/animal.html
+++ b/animal.html
@@ -25,20 +25,28 @@
                 </div>
                 <!-- Header End -->
 
+                <!-- Page Content Start -->
+                <div id="page-content">
                 <!--animal gallery view starts-->
-                <h1>Animals</h1>
+                    <div id="animale-box">
+                        <div id="animale-name">Animals</div>
+                    </div>
+
                     <div class="main">
-                        <img src="./images/an2.jpg"/>
-                        <img src="./images/an1.jpg"/>
-                        <img src="./images/an6.jpg"/>
-                        <img src="./images/an4.jpeg"/>
-                        <img src="./images/an5.jpg"/>
-                        <img src="./images/an3.jpg"/>
+                        <img id="img1" src="./images/an2.jpg"/>
+                        <img id="img1" src="./images/an1.jpg"/>
+                        <img id="img1" src="./images/an6.jpg"/>
+                        <img id="img1" src="./images/an4.jpeg"/>
+                        <img id="img1" src="./images/an5.jpg"/>
+                        <img id="img1" src="./images/an3.jpg"/>
                     </div>
 
                 <!--animal gallery view ends-->
         
                 
+                </div>
+
+                <!-- Page Content End -->
             </div>
                 <!-- Footer Start -->
                 <div id="footer-outer">
