contact us form added

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -20,7 +20,7 @@
                     <a href="#" id="link"><li id="link-name">Home</li></a>
                     <a href="gallery.html" id="link"><li id="link-name">Gallery</li></a>
                     <a href="aboutUs.html" id="link"><li id="link-name1">About Us</li></a>
-                    <a href="#" id="link"><li id="link-name">Contact Us</li></a>
+                    <a href="contactUs.html" id="link"><li id="link-name">Contact Us</li></a>
                     <a href="#" id="link"><li id="link-name">Reviews</li></a>
                 </ul>
             </div>
