--- a/contactUs.html
+++ b/contactUs.html
@@ -39,6 +39,24 @@
             </div>
                 
             <img src="images/a3.jpg" id="a3-image" alt="image">
+            <div id="contact-form">
+                <h2>Contact Us Form</h2>
+                <div id="form">
+                  <label>Full Name *</label><br>
+                  <input type="text" id="fullname" name="fullname"><br>
+                  <label>Email *</label><br>
+                  <input type="email" id="email" name="email" ><br>
+                  <label>Phone *</label><br>
+                  <input type="tel" id="phone" name="phone"><br>
+                  <label>Subject *</label><br>
+                  <input type="text" id="subject" name="subject" ><br>
+                  <label>Message *</label><br>
+                  <input type="text" id="msg" name="msg"><br>
+                  <button type="submit">Send</button>
+                </div>
+
+
+            </div>
 
         </div>
 
