--- a/birds.html
+++ b/birds.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <link href="images/logo.png" rel="icon" type="image/png"/>
         <meta name="viewport" content="width-device-width,initial-scale=1.0"/>
+        <link href="images/logo.png" rel="icon" type="image/png"/>
         <link rel="stylesheet" href="./css/birds.css"/>
         <title>Chalk Stories</title>
 
