home page added

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="images/logo.png" rel="icon" type="image/png"/>
-    <link rel="stylesheet" href="css/contactUs.css" type="text/css"/>
+    <link rel="stylesheet" href="css/home.css" type="text/css"/>
     <title>Chalk Stories</title>
 </head>
 <body>
@@ -19,49 +19,46 @@
             <ul id="nav-bar">
                 <a href="home.html" id="link"><li id="link-name">Home</li></a>
                 <a href="gallery.html" id="link"><li id="link-name">Gallery</li></a>
-                <a href="aboutUs.html" id="link"><li id="link-name">About Us</li></a>
-                <a href="contactUs.html" id="link"><li id="link-name1">Contact Us</li></a>
+                <a href="aboutUs.html" id="link"><li id="link-name1">About Us</li></a>
+                <a href="contactUs.html" id="link"><li id="link-name">Contact Us</li></a>
                 <a href="#" id="link"><li id="link-name">Reviews</li></a>
             </ul>
         </div>
         <!-- Header End -->
 
-        <!-- Page Content Start -->
-
+        <!--home page content started-->
         <div id="page-content">
-            <div id="first-box">
-                <div id="contact-us">Contact Us</div>
-                <p id="contact-us-first-part">
-                Hope you enjoyed browsing through the site! If what you have seen has caught your interest, 
-                I'd love to hear from you!<br><br>
-                If you're interested in a commission or would like to purchase a painting or print, please inquire via this form or send a direct e-mail with the required information. Please visit Commissions for more information of the process. Prices of paintings and prints is noted under each painting, in the Gallery section.
-                </p>                
+            <div id="home-box">
+                <p id="description">
+                    Welcome to Chalk Stories! Chalk Stories showcases my passion for the natural world, through art.<br><br>
+                    Browsing through the gallery, you will see original paintings ranging from colourful birds to much cherished pets. 
+                    All paintings were completed using soft and hard pastels, 
+                    my preferred medium, due to the high pigment content and rich effects.<br><br>
+                    Both originals and premium-quality giclée prints are available for sale.
+                    I also undertake commission work, whether pets or wildlife. Feel free to browse the site,  if you have any questions, please drop me a line or give me a call.<br><br>
+                    Enjoy! 
+                </p>
             </div>
-                
-            <img src="images/a3.jpg" id="a3-image" alt="image">
-            <div id="contact-form">
-                <h2>Contact Us Form</h2>
-                <div id="form">
-                  <label>Full Name *</label><br>
-                  <input type="text" id="fullname" name="fullname"><br>
-                  <label>Email *</label><br>
-                  <input type="email" id="email" name="email" ><br>
-                  <label>Phone *</label><br>
-                  <input type="tel" id="phone" name="phone"><br>
-                  <label>Subject *</label><br>
-                  <input type="text" id="subject" name="subject" ><br>
-                  <label>Message *</label><br>
-                  <input type="text" id="msg" name="msg"><br>
-                  <button type="submit">Send</button>
+
+            <div id="animal-image">
+                <div id="dog">
+                    <img src="./images/dogs.jpg">
+                </div>
+                <div id="tiger">
+                    <img src="./images/11.jpg">
+                </div>
+                <div id="bird1">
+                    <img src="./images/12.jpg">
+                </div>
+                <div id="bird2">
+                    <img src="./images/wild1.jpg">
                 </div>
 
-
             </div>
-
         </div>
+        <!--home page content end-->
 
-        <!-- Page Content End -->
-
+        
     </div>
         <!-- Footer Start -->
         <div id="footer-outer">
