--- a/birds.html
+++ b/birds.html
@@ -16,10 +16,10 @@
                 <div id="navigation-bar">
                     <div id="site-name">Chalk stories</div>
                     <ul id="nav-bar">
-                        <a href="#" id="link"><li id="link-name">Home</li></a>
+                        <a href="home.html" id="link"><li id="link-name">Home</li></a>
                         <a href="gallery.html" id="link"><li id="link-name1">Gallery</li></a>
                         <a href="aboutUs.html" id="link"><li id="link-name">About Us</li></a>
-                        <a href="#" id="link"><li id="link-name">Contact Us</li></a>
+                        <a href="contactUs.html" id="link"><li id="link-name">Contact Us</li></a>
                         <a href="#" id="link"><li id="link-name">Reviews</li></a>
                     </ul>
                 </div>
