Update the contactUs.html and contactUs.css

--- a/contactUs.html
+++ b/contactUs.html
@@ -40,18 +40,18 @@
                 
             <img src="images/a3.jpg" id="a3-image" alt="image">
             <div id="contact-form">
-                <h2>Contact Us Form</h2>
+                <!-- <h2>Contact Us Form</h2> -->
                 <div id="form">
-                  <label>Full Name *</label><br>
-                  <input type="text" id="fullname" name="fullname"><br>
-                  <label>Email *</label><br>
-                  <input type="email" id="email" name="email" ><br>
-                  <label>Phone *</label><br>
-                  <input type="tel" id="phone" name="phone"><br>
-                  <label>Subject *</label><br>
-                  <input type="text" id="subject" name="subject" ><br>
-                  <label>Message *</label><br>
-                  <input type="text" id="msg" name="msg"><br>
+                  <label>Full Name *</label>
+                  <input type="text" id="fullname" name="fullname"><br><br>
+                  <label>Email *</label>
+                  <input type="email" id="email" name="email" ><br><br>
+                  <label>Phone *</label>
+                  <input type="tel" id="phone" name="phone"><br><br>
+                  <label>Subject *</label>
+                  <input type="text" id="subject" name="subject" ><br><br>
+                  <label>Message *</label>
+                  <input type="text" id="msg" name="msg"><br><br>
                   <button type="submit">Send</button>
                 </div>
 
