Update the home.html and home.css pages

--- a/home.html
+++ b/home.html
@@ -17,11 +17,11 @@
         <div id="navigation-bar">
             <div id="site-name">Chalk stories</div>
             <ul id="nav-bar">
-                <a href="home.html" id="link"><li id="link-name">Home</li></a>
+                <a href="home.html" id="link"><li id="link-name1">Home</li></a>
                 <a href="gallery.html" id="link"><li id="link-name">Gallery</li></a>
-                <a href="aboutUs.html" id="link"><li id="link-name1">About Us</li></a>
+                <a href="aboutUs.html" id="link"><li id="link-name">About Us</li></a>
                 <a href="contactUs.html" id="link"><li id="link-name">Contact Us</li></a>
-                <a href="#" id="link"><li id="link-name">Reviews</li></a>
+                <a href="#reviews-box" id="link"><li id="link-name">Reviews</li></a>
             </ul>
         </div>
         <!-- Header End -->
@@ -30,35 +30,69 @@
         <div id="page-content">
             <div id="home-box">
                 <p id="description">
-                    Welcome to Chalk Stories! Chalk Stories showcases my passion for the natural world, through art.<br><br>
+                    Welcome to Chalk Stories! Chalk Stories showcases my passion for the natural world, through art.<br><br><br>
                     Browsing through the gallery, you will see original paintings ranging from colourful birds to much cherished pets. 
                     All paintings were completed using soft and hard pastels, 
-                    my preferred medium, due to the high pigment content and rich effects.<br><br>
+                    my preferred medium, due to the high pigment content and rich effects.<br><br><br>
                     Both originals and premium-quality giclée prints are available for sale.
-                    I also undertake commission work, whether pets or wildlife. Feel free to browse the site,  if you have any questions, please drop me a line or give me a call.<br><br>
+                    I also undertake commission work, whether pets or wildlife. Feel free to browse the site,  if you have any questions, please drop me a line or give me a call.<br><br><br>
                     Enjoy! 
                 </p>
             </div>
 
             <div id="animal-image">
                 <div id="dog">
-                    <img src="./images/dogs.jpg">
+                    <img id="dog1" src="./images/dogs.jpg">
                 </div>
                 <div id="tiger">
-                    <img src="./images/11.jpg">
+                    <img id="tiger1" src="./images/11.jpg">
                 </div>
                 <div id="bird1">
-                    <img src="./images/12.jpg">
+                    <img id="bird1-1" src="./images/12.jpg">
                 </div>
                 <div id="bird2">
-                    <img src="./images/wild1.jpg">
+                    <img id="bird2-1" src="./images/wild1.jpg">
                 </div>
 
             </div>
+
+            <div id="reviews-box">
+                <div id="reviews-name">Reviews</div>
+            </div>
+
+            <div id="reviews-content">
+                <div id="reviews-content-part1">
+                    <img src="images/13.PNG" id="part1-image" alt="">
+                    <p id="part1-content">
+                        "My wife fell in love with this painting after seeing a post on Instagram. 
+                        I knew I had found the perfect birthday gift for her! 
+                        I reached out to Nirosh and asked him to reserve it for me. 
+                        I requested that he frame the painting, which he did within a week. 
+                        I'm very satisfied with the prompt service and my wife simply adores her gift!"
+                        <br><br><br>
+                        ~Jochen, Germany
+                    </p>
+                </div>
+
+                <div id="reviews-content-part2">
+                    <img src="images/14.PNG" id="part2-image" alt="">
+                    <p id="part2-content">
+                        "Absolutely brilliant - you managed to portray Kobe's emotions and intricate details so well, 
+                        it felt as if I was staring at a photograph. 
+                        I'm a huge fan of your work, and I had no doubts about how great it's going to be. 
+                        But seeing it for the first time, left me speechless. 
+                        I cannot thank you enough for taking the effort for creating this amazing piece of art. 
+                        For me, it's priceless. "
+                        <br><br><br>
+                        ~Jehan, Sri Lanka
+                    </p>
+                </div>
+
+            </div>
+
         </div>
         <!--home page content end-->
 
-        
     </div>
         <!-- Footer Start -->
         <div id="footer-outer">
